# vehicle-damage-reporting

./: .gitignore  .travis.yml  README.md
android/: .gitignore  .travis.yml  build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AndroidMain.cpp  VulkanMain.cpp  VulkanMain.hpp
android/app/src/main/java/com/pega/android/vehicledamagemodeling/app/: MainActivity.java  SomeCalc.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  main_activity.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/test/java/com/pega/android/vehicledamagemodeling/app/: SomeCalcTest.java  SomeTest.java
android/core/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/vehicledamagemodeling/: AndroidManifest.xml  build.gradle  proguard-rules.pro
blenderCarProject/: model.2.0.blend  model.2.0.dae  model.2.1.blend  model.2.1.dae  model.blend  model.dae
common/: schema.json
iOS/FVM/FVM/: FVM.h  FVMCarModelViewController.swift
iOS/FVM/FVM.xcodeproj/: project.pbxproj
iOS/FVM/FVMTests/: FVMTests.swift  MaterialProcessorTests.swift
iOS/FVM/Framework/: DamagedCar.storyboard  FVMCarModelViewController.swift
iOS/SampleApp/: supported-parts.txt
iOS/VehicleDamage/: BodyPart.swift  MetalView.swift  ViewController.swift
iOS/VehicleDamage.xcodeproj/: project.pbxproj
iOS/VehicleDamageModeling/: VehicleDamageModeling.h
(+158 files in other folders)
